--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,9 @@ body {
 
 main {
     padding: 30px;
+    margin-bottom: 30px;
+    font-size: large;
+    
 }
 
 header {
@@ -32,4 +35,21 @@ h1 {
 footer {
     background-color: #FAF0EA;
     padding: 10px;
+}
+
+/* main {
+    display: grid;
+    grid-template-columns: 150px auto 150px 35px 1fr;
+    grid-auto-rows: min-content;
+    grid-gap: 10px;
+} */
+
+section {
+    padding: 10px;
+}
+
+input {
+    background-color: #fde2e4 ;
+    margin: 5px;
+    height: 30px;
 }
